--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -97,28 +97,18 @@ jobs:
     - name: Initialize environment
       env:
         DEBIAN_FRONTEND: noninteractive
-      run: |
-        # 1. 打开 universe / multiverse
-        sudo add-apt-repository -y universe multiverse
-        sudo apt-get update -y
-
-        # 2. 只提取纯包名（去掉 # 注释、空行、取第一列）
-        DEPS_FILE="$GITHUB_WORKSPACE/.github/workflows/deps.txt"
-        [[ -f $DEPS_FILE ]] || { echo "❌ deps.txt 不存在"; exit 1; }
-
-        # 先展示将要安装的包，方便排错
-        echo "===== 待安装包列表 ====="
-        grep -vE '^(#|$)' "$DEPS_FILE" | awk '{print $1}' | tee /tmp/pkg.list
-        echo "========================"
-
-        # 批量安装
-        xargs -a /tmp/pkg.list --no-run-if-empty sudo apt-get install -y
-
-        # 3. 收尾
-        sudo apt-get autoremove --purge -y
-        sudo apt-get clean
+        TARGET_ARCH: ${{ inputs.target_arch }}
+        OPENWRT_VERSION: ${{ inputs.openwrt_version }}
+      run: | 
+        sudo -E apt-get -qq update -y
+        # 调用脚本生成对应架构+版本的依赖列表并安装
+        DEPS=$(./scripts/generate_deps.sh $TARGET_ARCH $OPENWRT_VERSION)
+        echo "生成的依赖列表：$DEPS"
+        sudo -E apt-get -qq install -y $DEPS
+        sudo -E apt-get -qq autoremove --purge
+        sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
-        sudo chown -R $USER:$GROUPS $GITHUB_WORKSPACE
+        sudo chown $USER:$GROUPS $GITHUB_WORKSPACE
         
     - name: Clone source code
       working-directory: ./
