--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -101,9 +101,9 @@ jobs:
         OPENWRT_VERSION: ${{ inputs.openwrt_version }}
       run: | 
         sudo -E apt-get -qq update -y
-        # 调用脚本生成对应架构+版本的依赖列表并安装
-        DEPS=$(./scripts/generate_deps.sh $TARGET_ARCH $OPENWRT_VERSION)
-        echo "生成的依赖列表：$DEPS"
+        # 调用依赖生成脚本（注意路径）
+        DEPS=$(.github/workflows/generate_deps_final.sh $TARGET_ARCH $OPENWRT_VERSION)
+        echo "生成依赖列表：$DEPS"
         sudo -E apt-get -qq install -y $DEPS
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
