--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -100,6 +100,22 @@ jobs:
       run: |
         git clone $REPO_URL -b $REPO_BRANCH openwrt
 
+    - name: Add NSS feed and prepare feeds
+      run: |
+        cd openwrt
+        # 1. 写入 NSS 专用 feed
+        echo "src-git nss_packages https://github.com/qosmio/nss-packages.git" >> feeds.conf.default
+
+        # 2. 完全刷新 feed
+        ./scripts/feeds clean
+        rm -rf tmp/
+        ./scripts/feeds update -a
+        ./scripts/feeds install -a
+        ./scripts/feeds install -a -p nss_packages
+
+        # 3. 补齐编译阶段报缺的依赖
+        ./scripts/feeds install libev lm-sensors libpam libtirpc luci-i18n-base-zh-cn
+
     - name: Replace luci feed
       run: |
         cd openwrt
