--- a/.github/workflows/build-AX6-NSS.yml
+++ b/.github/workflows/build-AX6-NSS.yml
@@ -158,7 +158,7 @@ jobs:
       run: |
         make defconfig
         # 增加 S=y，并固定使用 8 线程进行下载 (j8)
-        make download -j8 S=y 
+        make download -j1 V=sc S=y
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
     
